<resources>
    <string name="app_name">Weather application</string>
    <string name="humidity_text">57 %</string>
    <string name="visibility">10 km</string>
    <string name="pressure_text">1019 hPa</string>
    <string name="speed_text">20 km/h</string>
    <string name="wind_text">SE</string>
    <string name="today_text">Today</string>
    <string name="share_text">Share</string>
    <string name="temp_text">22°С | Sunny</string>
    <string name="share">Share</string>
    <string name="london_uk">London, UK</string>
    <string name="time">13:00</string>
    <string name="description">Clear</string>
    <string name="temp">22</string>
    <string name="location_permission">Location Permission</string>
    <string name="access_location_message">This application requires access to your location to function!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="internet_required_message">Internet is required for this application to function!</string>
    <string name="today">Today</string>
    <string name="forecast">Forecast</string>
    <string name="qq">|</string>
    <string name="type">text/plain</string>
    <string name="send_intent_title">Share weather</string>
    <string name="text_share">no data</string>
    <string name="_q">°</string>
    <string name="location">London</string>
    <string name="pressure">1019</string>
    <string name="humidity_name">Humidity</string>
    <string name="humidity">90%</string>
</resources>