<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/todayTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginBottom="@dimen/dp16"
        android:gravity="center"
        android:text="@string/today_text"
        android:textColor="@color/black"
        android:textSize="@dimen/sp20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sp2"
        android:layout_marginTop="@dimen/dp16"
        android:background="@color/yellow"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayTextView" />

    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="@dimen/dp100"
        android:layout_height="@dimen/dp100"
        android:layout_marginTop="@dimen/dp52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/line"
        app:srcCompat="@drawable/ic_test" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:text="@string/london_uk"
        android:textColor="@color/black"
        android:textSize="@dimen/sp20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherImageView" />

    <ImageView
        android:id="@+id/locationImageView"
        android:layout_width="@dimen/dp20"
        android:layout_height="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp36"
        app:layout_constraintBottom_toBottomOf="@+id/locationTextView"

        app:layout_constraintEnd_toStartOf="@+id/locationTextView"
        app:layout_constraintTop_toTopOf="@+id/locationTextView"
        app:srcCompat="@drawable/mark" />

    <TextView
        android:id="@+id/tempTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp24"
        android:text="@string/temp_text"
        android:textColor="@color/blue"
        android:textSize="@dimen/sp24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

    <LinearLayout
        android:id="@+id/lineTwo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp2"
        android:layout_marginStart="@dimen/dp100"
        android:layout_marginTop="@dimen/dp52"
        android:layout_marginEnd="@dimen/dp100"
        android:background="@color/yellow"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weather_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineTwo">

        <ImageView
            android:id="@+id/humidityImageView"
            android:layout_width="@dimen/dp36"
            android:layout_height="@dimen/dp36"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_test" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/dp36"
            android:layout_height="@dimen/dp36"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginEnd="@dimen/dp32"
            app:layout_constraintEnd_toStartOf="@+id/pressureImageView"
            app:layout_constraintStart_toEndOf="@id/humidityImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_test" />

        <ImageView
            android:id="@+id/pressureImageView"
            android:layout_width="@dimen/dp36"
            android:layout_height="@dimen/dp36"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_test" />


        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp4"
            android:text="@string/humidity_text"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="@+id/humidityImageView"
            app:layout_constraintStart_toStartOf="@+id/humidityImageView"
            app:layout_constraintTop_toBottomOf="@+id/humidityImageView" />

        <TextView
            android:id="@+id/imageView2TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp4"
            android:text="@string/_1_0_mm"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/pressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp4"
            android:text="@string/pressure_text"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="@+id/pressureImageView"
            app:layout_constraintStart_toStartOf="@+id/pressureImageView"
            app:layout_constraintTop_toBottomOf="@+id/pressureImageView" />

        <ImageView
            android:id="@+id/speedImageView"
            android:layout_width="@dimen/dp36"
            android:layout_height="@dimen/dp36"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginTop="@dimen/dp20"
            app:layout_constraintEnd_toStartOf="@+id/windImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2TextView"
            app:srcCompat="@drawable/ic_test" />

        <ImageView
            android:id="@+id/windImageView"
            android:layout_width="@dimen/dp36"
            android:layout_height="@dimen/dp36"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/speedImageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView2TextView"
            app:srcCompat="@drawable/ic_test" />

        <TextView
            android:id="@+id/speedTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp4"
            android:text="@string/speed_text"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="@+id/speedImageView"
            app:layout_constraintStart_toStartOf="@+id/speedImageView"
            app:layout_constraintTop_toBottomOf="@+id/speedImageView" />

        <TextView
            android:id="@+id/windTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp4"
            android:text="@string/wind_text"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="@+id/windImageView"
            app:layout_constraintStart_toStartOf="@+id/windImageView"
            app:layout_constraintTop_toBottomOf="@+id/windImageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/lineThird"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp2"
        android:layout_marginStart="@dimen/dp100"
        android:layout_marginTop="@dimen/dp28"
        android:layout_marginEnd="@dimen/dp100"
        android:background="@color/yellow"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_details" />

    <TextView
        android:id="@+id/shareTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp36"
        android:layout_marginBottom="@dimen/dp20"
        android:text="@string/share"
        android:textColor="@color/orange"
        android:textSize="@dimen/sp24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineThird" />

</androidx.constraintlayout.widget.ConstraintLayout>