<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/shimmerItemColor"
        android:text="@string/london_uk"
        android:textColor="@color/shimmerItemColor"
        android:textSize="@dimen/sp24"
        app:layout_constraintBottom_toTopOf="@+id/weatherImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/weatherImageView"
        android:layout_width="@dimen/dp120"
        android:layout_height="@dimen/dp120"
        android:background="@color/shimmerItemColor"
        app:layout_constraintBottom_toTopOf="@+id/tempTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

    <TextView
        android:id="@+id/tempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/shimmerItemColor"
        android:text="@string/temp"
        android:textColor="@color/shimmerItemColor"
        android:textSize="@dimen/sp120"
        app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherImageView" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/shimmerItemColor"
        android:text="@string/description"
        android:textColor="@color/shimmerItemColor"
        android:textSize="@dimen/sp30"
        app:layout_constraintBottom_toTopOf="@+id/weather_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weather_details"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/shareTextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView">

        <View
            android:id="@+id/humidityImageView"
            android:layout_width="@dimen/dp36"
            android:layout_height="@dimen/dp36"
            app:layout_constraintEnd_toStartOf="@+id/visibilityImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/visibilityImageView"
            android:layout_width="@dimen/dp36"
            android:layout_height="@dimen/dp36"
            app:layout_constraintEnd_toStartOf="@+id/pressureImageView"
            app:layout_constraintStart_toEndOf="@id/humidityImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/pressureImageView"
            android:layout_width="@dimen/dp36"
            android:layout_height="@dimen/dp36"
            app:layout_constraintEnd_toStartOf="@+id/speedImageView"
            app:layout_constraintStart_toEndOf="@id/visibilityImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:background="@color/shimmerItemColor"
            android:text="@string/visibility"
            android:textColor="@color/shimmerItemColor"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="@+id/humidityImageView"
            app:layout_constraintStart_toStartOf="@+id/humidityImageView"
            app:layout_constraintTop_toBottomOf="@+id/humidityImageView" />

        <TextView
            android:id="@+id/visibilityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:background="@color/shimmerItemColor"
            android:text="@string/visibility"
            android:textColor="@color/shimmerItemColor"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="@+id/visibilityImageView"
            app:layout_constraintStart_toStartOf="@+id/visibilityImageView"
            app:layout_constraintTop_toBottomOf="@+id/visibilityImageView" />

        <TextView
            android:id="@+id/pressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:background="@color/shimmerItemColor"
            android:text="@string/visibility"
            android:textColor="@color/shimmerItemColor"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="@+id/pressureImageView"
            app:layout_constraintStart_toStartOf="@+id/pressureImageView"
            app:layout_constraintTop_toBottomOf="@+id/pressureImageView" />

        <View
            android:id="@+id/speedImageView"
            android:layout_width="@dimen/dp36"
            android:layout_height="@dimen/dp36"
            app:layout_constraintEnd_toStartOf="@+id/windImageView"
            app:layout_constraintStart_toEndOf="@+id/pressureImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/windImageView"
            android:layout_width="@dimen/dp36"
            android:layout_height="@dimen/dp36"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/speedImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/speedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:background="@color/shimmerItemColor"
            android:text="@string/visibility"
            android:textColor="@color/shimmerItemColor"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="@+id/speedImageView"
            app:layout_constraintStart_toStartOf="@+id/speedImageView"
            app:layout_constraintTop_toBottomOf="@+id/speedImageView" />

        <TextView
            android:id="@+id/windDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:background="@color/shimmerItemColor"
            android:text="@string/visibility"
            android:textColor="@color/shimmerItemColor"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="@+id/windImageView"
            app:layout_constraintStart_toStartOf="@+id/windImageView"
            app:layout_constraintTop_toBottomOf="@+id/windImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/shareTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="@dimen/sp24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_details" />

</androidx.constraintlayout.widget.ConstraintLayout>